Change name back to Guest

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button onclick="resetScores()">Reset</button>
         </div>
         <div class="team">
-            <div class="team-name">AWAY</div>
+            <div class="team-name">GUEST</div>
             <div class="score" id="guest-score">5</div>
             <div class="buttons">
                 <button onclick="updateScore('guest', 1)">+1</button>
